# llm_twin

./: Dockerfile  LICENSE  pyproject.toml  test.py
code_snippets/: mondb_test.py
configs/: digital_data_etl_amit_meel.yaml
pipelines/: __init__.py  digital_data_etl.py
src/: __init__.py  settings.py
src/application/crawlers/: base.py  custom_article.py  dispatcher.py  github.py  linkedin.py  medium.py
src/application/utils/: split_user_full_name.py
src/domain/: __init__.py  documents.py  types.py
src/domain/base/: nosql.py
src/infrastructure/db/: mongo.py
steps/etl/: crawl_links.py  get_or_create_user.py
tools/: run.py
