[project]
name = "llm-twin"
version = "0.1.0"
description = "AI character that learns to write like a particular person by incorporating its style, voice, and personality into an LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "chromedriver-autoinstaller>=0.6.4",
    "click>=8.1.3",
    "datasets>=3.0.2",
    "fake-useragent>=1.5.1",
    "fastapi>=0.115.3",
    "html2text>=2024.2.26",
    "jinja2>=3.1.4",
    "jmespath>=1.0.1",
    "langchain-community>=0.3.3",
    "langchain-openai>=0.2.3",
    "langchain>=0.0.27",
    "loguru>=0.7.2",
    "numpy>=1.26.4",
    "opik>=1.0.1",
    "poethepoet>=0.29.0",
    "pymongo>=4.10.1",
    "qdrant-client>=1.12.0",
    "rich>=13.9.3",
    "selenium>=4.25.0",
    "sentence-transformers>=3.2.1",
    "tiktoken>=0.8.0",
    "uvicorn>=0.32.0",
    "webdriver-manager>=4.0.2",
    "zenml>=0.68.0",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/amitmeel/llm_twin"
Packpublishing_Homepage = "https://github.com/PacktPublishing/LLM-Engineers-Handbook"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]
aws = [
    "aws-profile-manager>=0.7.3",
    "kubernetes>=31.0.0",
    "s3fs>=2024.9.0",
    "sagemaker>=2.232.2",
    "sagemaker-huggingface-inference-toolkit>=2.4.1",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
